--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es-CL">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css" /> 
+    <title>Modulo 2 - Desafío 1</title>
 </head>
 <body>
-    
+    <nav>
+        <div>
+
+        </div>
+    </nav>
+    <main>
+        <div>
+
+        </div>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
