--- a/index.html
+++ b/index.html
@@ -4,13 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" /> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/e5833839b9.js" crossorigin="anonymous"></script>
+
     <title>Modulo 2 - Desafío 1</title>
 </head>
 <body>
-    <nav>
-        <div>
-
-        </div>
+    <nav class="sidebar">
+        <div class="cards">
+            <div class="card">
+            <div class="card-header">Card 1</div>
+            <div class="card-body">
+            Lorem ipsum dolor sit amet consectetur
+            </div>
+            <div class="card-footer">Footer</div>
+            </div>
+            <div class="card">
+            <div class="card-header">Card 2</div>
+            <div class="card-body">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea
+            voluptate
+            unde, qui natus amet deleniti esse iste excepturi sit sequi a
+            nesciunt
+            error nostrum numquam, id quidem nisi. Eius, maxime?
+            </div>
+            <div class="card-footer">Footer</div>
+            </div>
+            </div>
     </nav>
     <main>
         <div>
