Added Profile Pictures, created profiles. Main missing

--- a/index.html
+++ b/index.html
@@ -14,26 +14,67 @@
 </head>
 <body>
     <nav class="sidebar">
+        <div class="profile">
+            <div class="small-thumbnail"><img src="assets/img/maria.jpg" alt="Imagen de perfil del usuario"></div>
+            <div class="icon"><i class="fa-regular fa-message"></i></div>
+            <div class="icon"><i class="fa-solid fa-bars"></i></div>
+            <div class="user-name">Maria</div>
+            <div class="current-status">
+            Activa ahora
+            </div>
+            <div class="Chat CTA Button">
+                <a>Nuevo Chat</a>
+                </div>            
         <div class="cards">
             <div class="card">
-            <div class="card-header">Card 1</div>
+            <div class="big-thumbnail"><img src="assets/img/1-Juanita.jpg" alt="Imagen de perfil de contacto"></div>
+            <div class="card-header">Juanita</div>
             <div class="card-body">
-            Lorem ipsum dolor sit amet consectetur
+            At vero eos et accusa
             </div>
-            <div class="card-footer">Footer</div>
-            </div>
-            <div class="card">
-            <div class="card-header">Card 2</div>
+        <div class="card">
+            <div class="big-thumbnail"><img src="assets/img/2-Alberto.jpg" alt="Imagen de perfil de contacto"></div>
+            <div class="card-header">Alberto</div>
             <div class="card-body">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea
-            voluptate
-            unde, qui natus amet deleniti esse iste excepturi sit sequi a
-            nesciunt
-            error nostrum numquam, id quidem nisi. Eius, maxime?
+            blanditiis praesentium
+            </div>    
+        <div class="card">
+            <div class="big-thumbnail"><img src="assets/img/3-Ignacio.jpg" alt="Imagen de perfil de contacto"></div>
+            <div class="card-header">Ignacio</div>
+            <div class="card-body">
+            officiis debitis aut
             </div>
-            <div class="card-footer">Footer</div>
+        <div class="card">
+            <div class="big-thumbnail"><img src="assets/img/4-Cristian.jpg" alt="Imagen de perfil de contacto"></div>
+            <div class="card-header">Cristian</div>
+            <div class="card-body">
+            Nam libero tempore
             </div>
+        <div class="card">
+            <div class="big-thumbnail"><img src="assets/img/5-Maria Jose.jpg" alt="Imagen de perfil de contacto"></div>
+            <div class="card-header">María José</div>
+            <div class="card-body">
+            impedit quo minus id
             </div>
+        <div class="card">
+            <div class="big-thumbnail"><img src="assets/img/6-Gonzalo.jpg" alt="Imagen de perfil de contacto"></div>
+            <div class="card-header">Gonzalo</div>
+            <div class="card-body">
+            At vero eos et accusa
+            </div>
+        <div class="card">
+            <div class="big-thumbnail"><img src="assets/img/7-Juan Pablo.jpg" alt="Imagen de perfil de contacto"></div>
+            <div class="card-header">Juan Pablo</div>
+            <div class="card-body">
+            necessitatibus saepe
+            </div>
+        <div class="card">
+            <div class="big-thumbnail"><img src="assets/img/8-Magdalena.jpg" alt="Imagen de perfil de contacto"></div>
+            <div class="card-header">Magdalena</div>
+            <div class="card-body">
+            ut et voluptates
+            </div>                                  
+
     </nav>
     <main>
         <div>
