Fixed sidebar (except icons on the right side)

--- a/index.html
+++ b/index.html
@@ -15,70 +15,114 @@
 <body>
     <nav class="sidebar">
         <div class="profile">
-            <div class="small-thumbnail"><img src="assets/img/maria.jpg" alt="Imagen de perfil del usuario"></div>
-            <div class="icon"><i class="fa-regular fa-message"></i></div>
-            <div class="icon"><i class="fa-solid fa-bars"></i></div>
+            <div><img class="small-thumbnail" src="assets/img/maria.jpg" alt="Imagen de perfil del usuario"></div>
             <div class="user-name">Maria</div>
             <div class="current-status">
             Activa ahora
             </div>
-            <div class="Chat CTA Button">
-                <a>Nuevo Chat</a>
-                </div>            
-        <div class="cards">
-            <div class="card">
-            <div class="big-thumbnail"><img src="assets/img/1-Juanita.jpg" alt="Imagen de perfil de contacto"></div>
-            <div class="card-header">Juanita</div>
-            <div class="card-body">
-            At vero eos et accusa
+            <div class="icon"><i class="fa-regular fa-message"></i></div>
+            <div class="icon"><i class="fa-solid fa-bars"></i></div>
             </div>
-        <div class="card">
-            <div class="big-thumbnail"><img src="assets/img/2-Alberto.jpg" alt="Imagen de perfil de contacto"></div>
-            <div class="card-header">Alberto</div>
-            <div class="card-body">
-            blanditiis praesentium
-            </div>    
-        <div class="card">
-            <div class="big-thumbnail"><img src="assets/img/3-Ignacio.jpg" alt="Imagen de perfil de contacto"></div>
-            <div class="card-header">Ignacio</div>
-            <div class="card-body">
-            officiis debitis aut
+            <div class="chat-cta-button-container">
+                <a class="chat-cta-button">Nuevo Chat</a>
+                </div>
+            </div>            
+            <div class="cards"> 
+            <div>
+                <img class="big-thumbnail" src="assets/img/1-Juanita.jpg" alt="Imagen de perfil de contacto">
             </div>
-        <div class="card">
-            <div class="big-thumbnail"><img src="assets/img/4-Cristian.jpg" alt="Imagen de perfil de contacto"></div>
-            <div class="card-header">Cristian</div>
-            <div class="card-body">
-            Nam libero tempore
+            <div class="card-header">
+                Juanita
             </div>
-        <div class="card">
-            <div class="big-thumbnail"><img src="assets/img/5-Maria Jose.jpg" alt="Imagen de perfil de contacto"></div>
-            <div class="card-header">María José</div>
             <div class="card-body">
-            impedit quo minus id
+                At vero eos et accusa
             </div>
-        <div class="card">
-            <div class="big-thumbnail"><img src="assets/img/6-Gonzalo.jpg" alt="Imagen de perfil de contacto"></div>
-            <div class="card-header">Gonzalo</div>
-            <div class="card-body">
-            At vero eos et accusa
             </div>
-        <div class="card">
-            <div class="big-thumbnail"><img src="assets/img/7-Juan Pablo.jpg" alt="Imagen de perfil de contacto"></div>
-            <div class="card-header">Juan Pablo</div>
-            <div class="card-body">
-            necessitatibus saepe
-            </div>
-        <div class="card">
-            <div class="big-thumbnail"><img src="assets/img/8-Magdalena.jpg" alt="Imagen de perfil de contacto"></div>
-            <div class="card-header">Magdalena</div>
-            <div class="card-body">
-            ut et voluptates
-            </div>                                  
-
+            <div class="cards"> 
+                <div>
+                    <img class="big-thumbnail" src="assets/img/2-Alberto.jpg" alt="Imagen de perfil de contacto">
+                </div>
+                <div class="card-header">
+                    Alberto
+                </div>
+                <div class="card-body">
+                    blanditiis praesentium
+                </div>
+                </div>
+                <div class="cards"> 
+                    <div>
+                        <img class="big-thumbnail" src="assets/img/3-Ignacio.jpg" alt="Imagen de perfil de contacto">
+                    </div>
+                    <div class="card-header">
+                        Ignacio
+                    </div>
+                    <div class="card-body">
+                        officiis debitis aut
+                    </div>
+                    </div>
+                    <div class="cards"> 
+                        <div>
+                            <img class="big-thumbnail" src="assets/img/4-Cristian.jpg" alt="Imagen de perfil de contacto">
+                        </div>
+                        <div class="card-header">
+                            Cristian
+                        </div>
+                        <div class="card-body">
+                            Nam libero tempore
+                        </div>
+                        </div>
+                        <div class="cards"> 
+                            <div>
+                                <img class="big-thumbnail" src="assets/img/5-Maria Jose.jpg" alt="Imagen de perfil de contacto">
+                            </div>
+                            <div class="card-header">
+                                María José
+                            </div>
+                            <div class="card-body">
+                                impedit quo minus id
+                            </div>
+                            </div>
+                            <div class="cards"> 
+                                <div>
+                                    <img class="big-thumbnail" src="assets/img/6-Gonzalo.jpg" alt="Imagen de perfil de contacto">
+                                </div>
+                                <div class="card-header">
+                                    Gonzalo
+                                </div>
+                                <div class="card-body">
+                                    At vero eos et accusa
+                                </div>
+                                </div>
+                                <div class="cards"> 
+                                    <div>
+                                        <img class="big-thumbnail" src="assets/img/7-Juan Pablo.jpg" alt="Imagen de perfil de contacto">
+                                    </div>
+                                    <div class="card-header">
+                                        Juan Pablo
+                                    </div>
+                                    <div class="card-body">
+                                        necessitatibus saepe
+                                    </div>
+                                    </div>
+                                    <div class="cards"> 
+                                        <div>
+                                            <img class="big-thumbnail" src="assets/img/8-Magdalena.jpg" alt="Imagen de perfil de contacto">
+                                        </div>
+                                        <div class="card-header">
+                                            Magdalena
+                                        </div>
+                                        <div class="card-body">
+                                            ut et voluptates
+                                        </div>
+                                        </div>
+            
     </nav>
     <main>
-        <div>
-
+        <div class="main">
+            <img class="hero-image" src="assets/img/hand.png" alt="Logotipo CTA">
+            <h1>Comienza el Nertworking</h1>
+            <h2>Presiona el botón <b>“Nuevo chat”</b> para comenzar a crear nuevas
+                redes de contacto para tu empresa o emprendimiento.</h2>
         </div>
     </main>
     <footer>
