--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
             <div class="current-status">
             Activa ahora
             </div>
-            <div class="icon"><i class="fa-regular fa-message"></i></div>
-            <div class="icon"><i class="fa-solid fa-bars"></i></div>
+            <div class="icon">
+                <i class="fa-regular fa-message"></i>
+                <i class="fa-solid fa-bars"></i>
             </div>
+        </div>
             <div class="chat-cta-button-container">
-                <a class="chat-cta-button">Nuevo Chat</a>
+                <p class="chat-cta-button">Nuevo Chat</p>
                 </div>
             </div>            
             <div class="cards"> 
